--- a/src/app/modules/services/components/ui-development/ui-development.component.html
+++ b/src/app/modules/services/components/ui-development/ui-development.component.html
@@ -68,4 +68,23 @@
               </div>
         </div>
     </div>
+    <div class="service-layout3-responsive">
+        <ngb-accordion [closeOthers]="true" activeIds="static-1">
+          <ngb-panel id="static-1"  >  
+             <ng-template ngbPanelTitle>
+                <div class="dis_flex">
+                   <div> Business Understanding </div>
+                   <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png"> </div>
+                </div>
+              </ng-template> 
+            <ng-template ngbPanelContent >
+             <div class="row">
+                <div class="col-md-6 design-left">
+                  <p>When it comes to selecting a platform it can be challenging, since that defines how the product can or cannot expand in future without technical boundaries. We strongly believe technology should aid a Product in scaling higher and not cripple the growth in any way. Based on the product vision and road map appropriate technology needs to be selected.</p>
+                </div>
+             </div>
+            </ng-template>
+          </ngb-panel>
+        </ngb-accordion>
+      </div>
 </div>
