--- a/src/app/components/contact/contact.component.scss
+++ b/src/app/components/contact/contact.component.scss
@@ -279,7 +279,7 @@
             padding: 35px 100px;
         }
         img{
-           // width: 100%;
+            width: 140%;
         }
     }
     @include media-breakpoint-down(md) {
@@ -297,6 +297,9 @@
                 font-size: 20px;
                 margin-top: 30px;
             }
+        }
+        img{
+            width: 220%;
         }
     }
     @include media-breakpoint-down(sm) {
