--- a/src/app/components/career-ux/career-ux.component.scss
+++ b/src/app/components/career-ux/career-ux.component.scss
@@ -187,6 +187,11 @@
                         padding-left: 5px;
                         transition: none !important;
                     }
+                    .form-control:focus{
+                        border-color: #ced4da;
+                        box-shadow: none;
+                      }
+                  
                 }
                 .form-control-file{
                     border: none;
