--- a/src/app/modules/services/components/user-experience/user-experience.component.scss
+++ b/src/app/modules/services/components/user-experience/user-experience.component.scss
@@ -50,6 +50,12 @@
                 max-width: 100%;
             }
         }
+        h1{
+            font-size: 36px;
+        }
+        p{
+            font-size: 24px;
+        }
     }
 }
 .service-layout1{
@@ -160,6 +166,12 @@
                 max-width: 100%;
             }
         }
+        h3{
+            font-size: 28px;
+        }
+        p{
+            font-size: 20px;
+        }
     }
 }
 .service-layout3{
@@ -199,7 +211,7 @@
 @include media-breakpoint-down(sm) {
 
     .service-layout3-responsive{
-        margin-top: 150px;
+        margin-top: 100px;
         display: block;
         ::ng-deep{
             .card{
