--- a/src/app/modules/work/components/health-care/health-care.component.html
+++ b/src/app/modules/work/components/health-care/health-care.component.html
@@ -18,12 +18,12 @@
     </div>
     <div class="about-project">
         <div class="row">
-            <div class="col-md-3">
+            <div class="col-md-4">
                 <div class="container">
                     <h2>About Project</h2>
                 </div>
             </div>
-            <div class="col-md-9">
+            <div class="col-md-8">
                 <div class="container">
                     <p>With a shift towards organic food consumption by people, and increased middle-men commissions the life of a normal farmer becomes worse day by day. This platform helps the local farming communities to produce food based on customer demand and deliver them directly avoiding the middle-men thus creating a sustainable and happy farming community.</p>
                 </div>
@@ -47,7 +47,7 @@
         <div class="container">
             <div class="target">
                 <div class="row">
-                    <div class="col-md-3">
+                    <div class="col-md-4">
                         <h6>Target Audience</h6>
                     </div>
                     <div class="col-md-8">
@@ -59,7 +59,7 @@
             </div>
             <div class="strategy">
                 <div class="row">
-                    <div class="col-md-3">
+                    <div class="col-md-4">
                         <h6>Strategy</h6>
                     </div>
                     <div class="col-md-8">
@@ -74,7 +74,7 @@
     <div class="needs-challenges">
         <div class="container">
         <div class="row">
-            <div class="col-md-3">
+            <div class="col-md-4">
                 <h1>23+</h1>
                 <h2>Users Interviewed</h2>
             </div>
@@ -144,12 +144,21 @@
     <div class="design">
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-6 only_web">
                     <h6>Build a design system that could be used through their multiple user portals</h6>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 only_web">
                     <img src="./assets/images/works/healthcare5.png">
                 </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6 only-mobile">
+                    <img src="./assets/images/works/healthcare5.png">
+                </div>
+                <div class="col-md-6 only-mobile">
+                    <h6>Build a design system that could be used through their multiple user portals</h6>
+                </div>
+               
             </div>
         </div>
     </div>
