--- a/src/app/modules/work/components/skill-development/skill-development.component.scss
+++ b/src/app/modules/work/components/skill-development/skill-development.component.scss
@@ -31,6 +31,16 @@ h6{
             font-weight: 300;
             margin-top: 30px;
         }
+        @include media-breakpoint-down(lg){
+            .banner-header{
+                padding: 150px 0px;
+            }
+        }
+        @include media-breakpoint-down(md){
+            .banner-header{
+                padding: 85px 0px;
+            }
+        }
     }
     .about-project{
         background-color: #FCFCFC;
@@ -39,10 +49,22 @@ h6{
             margin-right: 0;
             margin-left: 0;
         }
+        @include media-breakpoint-down(lg){
+            padding: 200px 0px;
+        }
+        @include media-breakpoint-down(md){
+            padding: 150px 0px;
+        }
     }
     .image{
         img{
             width: 100%;
+        }
+        @include media-breakpoint-down(sm){
+            img{
+                width: 100%;
+                display: none !important;
+            }  
         }
     }
     .approach{
@@ -54,6 +76,23 @@ h6{
         }
         p{
             line-height: 40px;
+        }
+        @include media-breakpoint-down(lg){
+            padding: 200px 0px;
+        }
+        @include media-breakpoint-down(md){
+            padding: 150px 0px;
+        }
+        @include media-breakpoint-down(sm){
+            padding: 150px 0px;
+            h2{
+                font-size: 36px;
+                margin-bottom: 30px;
+            }
+            p{
+                font-size: 24px;
+                line-height: 40px;
+            }
         }
     }
     .target-strategy{
@@ -93,6 +132,28 @@ h6{
         .needs-right{
             padding: 100px 30px;
         }
+        @include media-breakpoint-down(lg){
+            padding: 50px 0px;
+        }
+        @include media-breakpoint-down(md){
+            padding: 50px 0px;
+            h1{
+                font-size: 72px; 
+            }
+            h2{
+                font-size: 36px;
+            }
+        }
+        @include media-breakpoint-down(sm){
+            padding: 50px 0px;
+            .needs{
+                height: 1250px;
+                overflow: hidden;
+            }
+            .needs-right{
+                padding: 50px 30px;
+            }
+        }
     }
     .research{
         padding: 80px 0px;
@@ -102,6 +163,23 @@ h6{
         }
         p{
             line-height: 40px;
+        }
+        @include media-breakpoint-down(lg){
+            padding: 80px 0px;
+        }
+        @include media-breakpoint-down(md){
+            padding: 80px 0px;
+            h6{
+               font-size: 28px;
+               line-height: 43px;
+            }
+            p{
+                font-size: 20px;
+                line-height: 35px;
+            }
+        }
+        @include media-breakpoint-down(sm){
+            padding: 80px 0px;
         }
     }
     .green-image{
@@ -122,11 +200,54 @@ h6{
         p{
             line-height: 40px;
         }
+        @include media-breakpoint-down(lg){
+            padding: 80px 0px;
+            img{
+                width: 100%;
+                margin-top: 100px;
+            }
+        }
+        @include media-breakpoint-down(md){
+            padding: 40px 0px;
+            h6{
+               font-size: 28px;
+            }
+            p{
+               font-size: 24px;
+            }
+        }
+        @include media-breakpoint-down(sm){
+            padding: 40px 0px;
+            img{
+                width: 100%;
+            }
+    }
     }
     .typography-image{
         background-color: #FAFAFA;
         text-align: center;
         padding: 100px 0px;
+        @include media-breakpoint-down(lg){
+            padding: 100px 0px;
+            img{
+                width: 110%;
+                margin-top: 100px;
+            }
+        }
+        @include media-breakpoint-down(md){
+            padding: 75px 0px;
+            img{
+                width: 100%;
+                margin-top: 100px;
+            }
+        }
+        @include media-breakpoint-down(sm){
+            padding: 50px 0px;
+            img{
+                width: 100%;
+                margin-top: 100px;
+            }
+        }
     }
     .other-case-studies{
         .row{
