--- a/src/app/modules/work/components/uxahead/uxahead.component.scss
+++ b/src/app/modules/work/components/uxahead/uxahead.component.scss
@@ -31,6 +31,16 @@ h6{
             font-weight: 300;
             margin-top: 30px;
         }
+        @include media-breakpoint-down(lg){
+            .banner-header{
+                padding: 150px 0px;
+            }
+        }
+        @include media-breakpoint-down(md){
+            .banner-header{
+                padding: 85px 0px;
+            }
+        }
     }
     .about-project{
         background-color: #FCFCFC;
@@ -39,10 +49,22 @@ h6{
             margin-right: 0;
             margin-left: 0;
         }
+        @include media-breakpoint-down(lg){
+            padding: 200px 0px;
+        }
+        @include media-breakpoint-down(md){
+            padding: 150px 0px;
+        }
     }
     .image{
         img{
             width: 100%;
+        }
+        @include media-breakpoint-down(sm){
+            img{
+                width: 100%;
+                display: none !important;
+            }  
         }
     }
     .approach{
@@ -54,6 +76,23 @@ h6{
         }
         p{
             line-height: 40px;
+        }
+        @include media-breakpoint-down(lg){
+            padding: 200px 0px;
+        }
+        @include media-breakpoint-down(md){
+            padding: 150px 0px;
+        }
+        @include media-breakpoint-down(sm){
+            padding: 150px 0px;
+            h2{
+                font-size: 36px;
+                margin-bottom: 30px;
+            }
+            p{
+                font-size: 24px;
+                line-height: 40px;
+            }
         }
     }
     .target-strategy{
@@ -73,6 +112,23 @@ h6{
         p{
             line-height: 40px;
         }
+        @include media-breakpoint-down(lg){
+            padding: 80px 0px;
+        }
+        @include media-breakpoint-down(md){
+            padding: 80px 0px;
+            h6{
+               font-size: 28px;
+               line-height: 43px;
+            }
+            p{
+                font-size: 20px;
+                line-height: 35px;
+            }
+        }
+        @include media-breakpoint-down(sm){
+            padding: 80px 0px;
+        }
     }
     .work-description{
         padding: 80px 0px;
@@ -88,11 +144,54 @@ h6{
         img{
             padding: 200px 125px;
         }
+        @include media-breakpoint-down(lg){
+            padding: 80px 0px;
+            img{
+                width: 100%;
+                margin-top: 100px;
+            }
+        }
+        @include media-breakpoint-down(md){
+            padding: 40px 0px;
+            h6{
+               font-size: 28px;
+            }
+            p{
+               font-size: 24px;
+            }
+        }
+        @include media-breakpoint-down(sm){
+            padding: 40px 0px;
+            img{
+                width: 100%;
+            }
+    }
     }
     .typography-image{
         background-color: #FFFFFF;
         text-align: center;
         padding: 100px 0px;
+        @include media-breakpoint-down(lg){
+            padding: 100px 0px;
+            img{
+                width: 100%;
+                margin-top: 100px;
+            }
+        }
+        @include media-breakpoint-down(md){
+            padding: 75px 0px;
+            img{
+                width: 100%;
+                margin-top: 100px;
+            }
+        }
+        @include media-breakpoint-down(sm){
+            padding: 50px 0px;
+            img{
+                width: 100%;
+                margin-top: 100px;
+            }
+        }
     }
     .other-case-studies{
         .row{
